--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -70,7 +70,8 @@ production:
   sessions:
     default:
       database: cui_aboutme_production
-      url: <%= ENV['MONGOHQ_URL'] %>
+      hosts:
+        - <%= ENV['MONGOHQ_URL'] %>
     options:
       skip_version_check: true
       safe: true
